# social-media-analytics

./: .env.example  .gitignore  ACTORS.md  ACTOR_TROUBLESHOOTING.md  AUDIT_PHASE0.md  CLEANUP_RECOMMENDATIONS.md  CORRECT_ACTOR_CONFIG.md  DELIVERABLES.md  FACEBOOK_ACTOR_UPDATE.md  FACEBOOK_COMMENTS_WORKFLOW.md  GLINER_IMPLEMENTATION.md  IMMEDIATE_ACTION_PLAN.md  INSTAGRAM_WORKFLOW.md  NLP_ENHANCEMENTS.md  OPTIMIZATION.md  OPTIMIZATION_APPLIED.md  PHRASE_ANALYSIS_README.md  README.md  WORKFLOW_SUMMARY.md  clear_cache.py  data_audit.py  diagnose_posts_published_at.py  documentation.md  facebookActorsDoc.md  migrate_attach_comments.py  migrate_published_at.py  pyproject.toml  pytest.ini  requirements.txt  requirements_txt.txt  social_media_app.py  social_media_app_legacy.py
.azure/: ADAPTER_ARCHITECTURE.md  INTEGRATION_COMPLETE.md  PHASE4_POST_DETAILS_COMPLETE.md
.cursor/plans/: facebook-workflow-redesign-5c19301b.plan.md
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md
.github/workflows/: ci.yml
.streamlit/: config.toml  secrets.toml  secrets.toml.example
app/: __init__.py
app/adapters/: __init__.py  facebook.py  instagram.py  youtube.py
app/analytics/: __init__.py  (+1 more)
docs/: AUDIT_REPORT.md  DASHBOARD_IMPROVEMENT_REPORT.md  ERROR_CATALOG.md  UI_PLAN.md
markdown/: ACTORS.md  CODE_REVIEW_REORGANIZATION.md  DATABASE_INTEGRATION_SUMMARY.md  REORGANIZATION_PROGRESS.md
scripts/: QUICKSTART.md  README.md  __init__.py  run_in_venv.sh  run_tests.py  test_results_facebook_20251031_150817.json  test_results_facebook_20251031_150926.json
(+127 files in other folders)
