[project]
name = "social-media-analytics"
version = "0.1.0"
description = "Social media analytics dashboard with Apify integration"
readme = "README.md"
requires-python = ">=3.8"

[tool.ruff]
target-version = "py38"
line-length = 100
exclude = [".git", "__pycache__", "data", ".streamlit"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
]
ignore = ["E501"]  # line length handled by formatter

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-q --tb=short"
